--- a/dross.cabal
+++ b/dross.cabal
@@ -40,6 +40,7 @@ executable dross
                     , chronos
                     , rosezipper
                     , torsor
+                    -- , sdl2
                     , topograph
                     , linear
                     , OpenGL
@@ -51,10 +52,10 @@ executable dross
                     , mtl
                     , bearriver
                     -- The Nixpkgs package set does not contain the package: Gdi32
-                    , GLFW-b
+                    -- , GLFW-b
                     -- , bindings-GLFW
                     -- The Nixpkgs package set does not contain the package: vulkan-1 (system dependency)
-                    -- , vulkan
+                    , vulkan
     hs-source-dirs:   src
 
     default-language: Haskell2010
