--- a/dross.cabal
+++ b/dross.cabal
@@ -51,6 +51,7 @@ executable dross
                     , bytestring
                     , mtl
                     , bearriver
+                    , vector
                     -- The Nixpkgs package set does not contain the package: Gdi32
                     -- , GLFW-b
                     -- , bindings-GLFW
