--- a/template/cabal.project
+++ b/template/cabal.project
@@ -4,6 +4,8 @@ with-compiler: ghc-9.4.8
 packages:
     ./.
 
+-- hsc2hs doesn't support cross-compilation. This version of bindings-GLFW
+-- doesn't use hsc2hs.
 source-repository-package
     type: git
     location: https://github.com/sevanspowell/bindings-GLFW.git
